# QaApiAutomation

./: .env  .gitignore  .pabotsuitenames  CHANGELOG.md  CNAME  README.md  pyproject.toml  requirements-ci.txt  robot.conf  run.py  run_by_rf.py
.github/workflows/: run-tests.yml
all_rf_2026-03-06_10-28-10/: log.html  report.html
data/: chatFlow.xlsx  data001_ID.csv  data002_VN.csv  data002_VN2.csv  general_QA.xlsx  output-2025-07-28-1-268.xlsx
log/: log.html  output.xml  report.html
log4/: 0a3e736b-8021-4153-a885-358d04b8bc04-attachment.html
resources/: Common.robot  resource.robot  varfile_defvar.py
resources/data/: ApprovalDTO_workflow.json  ManualAdjustment_ApprovalDTO_workflow.json  Q&A.xlsx  UploadPaymentProof_ApprovalDTO_workflow.json  accountData.json  chatFlow.xlsx  general_QA.xlsx  mockPaymentData.json  车辆信息识别测试数据.xlsx
resources/env/: .env.example  load_env.py  pre.env  prod.env  uat.env
resources/js/: TestSign.py  init-firebase.js  sr.js
resources/lib/: Common.robot  SignGenerator.py  signGeneration.py
resources/operation/: ManualAdjustment.robot
resources/util/: DataKeywords.robot  ExtractorLibrary.py  Message.py  assertUtil.robot  chatFlow.xlsx  dbUtil.robot  httpCommon.robot  test.http  testAlert.py  timeStamp.robot  utilCommon.robot
tests/Fina/: FAPI-001-ask premium-Discount-quotation-demo1.robot  FAPI-001-ask premium-Discount-quotation-demo2.robot  FAPI-001-ask premium-Discount.robot  FAPI-001-ask premium-Discount_copy.robot  FAPI-001-ask premium-V2.robot  FAPI-001-ask premium.robot  FAPI-testConvert.robot
tests/MCPUnitTest/: main.py  (+4 more)
(+511 files in other folders)
