[tool.poetry]
name = "potrydemo002"
version = "0.1.0"
description = ""
authors = ["libingquan <libingquan@fuse.co.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
allure-robotframework = "^2.13.5"
appdirs="1.4.4"
Appium-Python-Client="3.2.1"
attrs="23.2.0"
beautifulsoup4="4.12.3"
certifi="2024.6.2"
charset-normalizer="3.3.2"
click="8.1.7"
colorama="0.4.6"
decorator="5.1.1"
docutils="0.21.2"
#docutils="0.20.1"
exceptiongroup="1.2.1"
h11="0.14.0"
idna="3.7"
Jinja2="3.1.4"
kitchen="1.2.6"
lxml="5.2.2"
markdown-it-py="3.0.0"
#markdown-it-py="2.2.0"
MarkupSafe="2.1.5"
mdurl="0.1.2"
outcome="1.3.0.post0"
pathspec="0.12.1"
Pygments="2.18.0"
PySocks="1.7.1"
requests="2.32.3"
rich="13.7.1"
rich-click="1.8.2"
robotframework="7.0"
robotframework-appiumlibrary="2.1.0"
robotframework-pythonlibcore="4.4.1"
robotframework-retryfailed="0.2.0"
robotframework-selenium2library="3.0.0"
robotframework-seleniumlibrary="6.4.0"
robotframework-tidy="4.13.0"
robotframework-ride="2.0.8.1"
selenium="4.16.0"
six="1.16.0"
sniffio="1.3.1"
sortedcontainers="2.4.0"
soupsieve="2.5"
tomli="2.0.1"
tqdm="4.66.4"
trio="0.25.1"
trio-websocket="0.11.1"
typing_extensions="4.12.2"
urllib3="1.26.6"
webdrivermanager="0.10.0"
wsproto="1.2.0"
robotframework-csvlibrary = "^0.0.5"
robotframework-datadriver = "^1.11.2"
robotframework-debuglibrary = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
